# DocuFinder

./: .env.example  .gitignore  Dockerfile  Dockerfile.embed  README.md  company-doc-finder-v2-buildprompt.md  docker-compose.frontend.yml  docker-compose.yml  pyproject.toml  setup.sh
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/documents/: page.tsx
frontend/src/app/(dashboard)/graph/: page.tsx
frontend/src/app/(dashboard)/search/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/chat/: ChatHistorySidebar.tsx  ChatInput.tsx  ChatMessageList.tsx  ChatSessionItem.tsx  CitationPreview.tsx  DocumentChatPanel.tsx  ExportDropdown.tsx  MarkdownRenderer.tsx  TypingIndicator.tsx  WelcomeHero.tsx  index.ts
frontend/src/components/document-viewer/: DOCXViewer.tsx  DocumentSearchBar.tsx  DocumentViewerPanel.tsx  PDFViewer.tsx  TXTViewer.tsx  ViewerModeToggle.tsx  index.ts
frontend/src/components/layout/: sidebar.tsx  top-app-bar.tsx
frontend/src/components/providers/: react-query.tsx
frontend/src/components/ui/: glassmorphic-card.tsx  icon.tsx  index.ts  kinetic-button.tsx  kinetic-input.tsx  metric-card.tsx  progress-bar.tsx  status-badge.tsx
frontend/src/hooks/: useChatSync.ts
frontend/src/types/: api.ts  next-auth.d.ts
nginx/: nginx.conf  unstructured.conf
scripts/: generate_demo_data.py  init_qdrant.py  requeue_stuck.py
src/api/: main.py  middleware.py
src/api/routes/: __init__.py  auth.py  chat.py  documents.py  extract.py  health.py  ingest.py  search.py  summarize.py
src/core/: backup.py  config.py  database.py  metrics.py  providers.py  qdrant_client.py  tenant_context.py  tracing.py  valkey_client.py
src/extraction/: llamasheets.py  local_sheets.py  sheets.py
src/ingestion/: classifier.py  loaders.py  pipeline.py  router.py  scanner.py  tasks.py  watcher.py
src/ingestion/parsers/: base.py  liteparse.py  llamaparse.py  pythondocx.py  unstructured.py
src/retrieval/: engine.py  summarizer.py
stitch_the_command_center_prd/document_matrix/: code.html
stitch_the_command_center_prd/global_dashboard/: code.html
stitch_the_command_center_prd/intelligence_terminal/: code.html
stitch_the_command_center_prd/reasoning_graph/: code.html
stitch_the_command_center_prd/the_command_center/: DESIGN.md
tests/e2e/: test_e2e.py
tests/eval/: rag_eval.py
